[tool.poetry]
name = "taiwan_exchange_rate_sample"
version = "0.1.0"
description = ""
authors = ["Kevin <kevin@cloud-ace.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
google-cloud-bigquery = "^1.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
